[project]
name = "zeroc-ice"
version = "3.8.0a0"
description = "Ice is a comprehensive RPC framework with support for Python, C++, .NET, Java, JavaScript and more."
authors = [
    {name = "ZeroC, Inc.", email = "info@zeroc.com"}
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPLv2 License"}
keywords = ["ice", "RPC"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://zeroc.com/ice"
Repository = "https://github.com/zeroc-ice/ice"
Documentation = "https://doc.zeroc.com/api/ice/main/python/index.html"
Issues = "https://github.com/zeroc-ice/ice/issues"
Changelog = "https://github.com/zeroc-ice/ice/blob/main/CHANGELOG-3.8.md"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["slice2py"]

[project.scripts]
slice2py = "slice2py:main"
