[project]
name = "zeroc-ice"
version = "3.8.0a0"
description = "Ice is a comprehensive RPC framework with support for Python, C++, .NET, Java, JavaScript and more."
authors = [{ name = "ZeroC, Inc.", email = "info@zeroc.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "GPL-2.0-only"
keywords = ["ice", "RPC"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://zeroc.com/ice"
Repository = "https://github.com/zeroc-ice/ice"
Documentation = "https://code.zeroc.com/ice/main/api/python/index.html"
Issues = "https://github.com/zeroc-ice/ice/issues"
Changelog = "https://github.com/zeroc-ice/ice/blob/main/CHANGELOG-3.8.md"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["slice2py"]

[project.scripts]
slice2py = "slice2py:main"

[tool.pyright]
include = ["test"]
typeCheckingMode = "standard"
extraPaths = ["python", "../scripts"]
