add_subdirectory(Common)
add_subdirectory(Ice)
add_subdirectory(IceSSL/configuration)
add_subdirectory(Glacier2)
add_subdirectory(IceBox/admin)
add_subdirectory(IceBox/configuration)
add_subdirectory(IceBridge/simple)
add_subdirectory(IceDiscovery/simple)
add_subdirectory(IceGrid)
add_subdirectory(IceStorm)
add_subdirectory(IceUtil)
add_subdirectory(Slice)

if(APPLE)
	add_subdirectory(ios)
endif()
